--- a/IB_Web/src/main/resources/static/css/login.css
+++ b/IB_Web/src/main/resources/static/css/login.css
@@ -24,6 +24,7 @@
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
+  color: red;
 }
 .form button {
   font-family: "Roboto", sans-serif;
